--- a/src/styles/layouts/_grid.css
+++ b/src/styles/layouts/_grid.css
@@ -4,7 +4,9 @@
 .container {
   width: min(100% - 2rem, var(--container-width-max));
   margin-inline: auto;
-  padding-inline: var(--spacing-clamp-lg);
+  padding: var(--spacing-clamp-lg);
+  /* padding-inline: var(--spacing-clamp-lg);
+  padding-block: var(--spacing-clamp-lg); */
   background-color: var(--color-brand-light);
   border-radius: var(--spacing-clamp-md);
 }
@@ -12,18 +14,22 @@
 .container-narrow {
   width: min(100%, var(--container-width-narrow));
   margin-inline: auto;
-  padding-inline: var(--spacing-clamp-lg);
+  /* padding-inline: var(--spacing-clamp-lg); */
+  padding: var(--spacing-clamp-lg);
+
 }
 
 .section {
   margin-block: var(--spacing-clamp-xl);
-  padding-block: var(--spacing-clamp-xl);
+  /* padding-block: var(--spacing-clamp-xl); */
+  padding: var(--spacing-clamp-xl);
   overflow: hidden;
 }
 
 .section-sm {
   margin-block: var(--spacing-clamp-lg);
-  padding-block: var(--spacing-clamp-lg);
+  /* padding-block: var(--spacing-clamp-lg); */
+  padding: var(--spacing-clamp-lg);
   overflow: hidden;
 }
 
